// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with colSpan and rowSpan params for cells 1`] = `
.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  border: 1px solid #d1d5d7;
  width: 100%;
  font: 400 12px/20px 'Roboto';
  color: #2c2c2c;
}

.c0 th {
  font-weight: 600;
  text-align: left;
  background: #e2e6e3;
}

.c0 th,
.c0 td {
  padding: 8px 12px;
  border-bottom: 1px solid #d1d5d7;
  border-right: 1px solid #d1d5d7;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

.c0 tr:hover,
.c0 td:hover {
  background: rgba(71,219,153,0.16);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        colSpan={2}
      >
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        rowSpan={2}
      >
        Cell
      </td>
      <td>
        Cell
      </td>
    </tr>
    <tr>
      <td>
        Cell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`render renders with lined param 1`] = `
.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  border: 1px solid #d1d5d7;
  width: 100%;
  font: 400 12px/20px 'Roboto';
  color: #2c2c2c;
}

.c0 th {
  font-weight: 600;
  text-align: left;
  background: #e2e6e3;
}

.c0 th,
.c0 td {
  padding: 8px 12px;
  border-bottom: 1px solid #d1d5d7;
  border-right: 1px solid #d1d5d7;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

.c0 tr:hover,
.c0 td:hover {
  background: rgba(71,219,153,0.16);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th>
        Header
      </th>
      <th>
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Cell
      </td>
      <td>
        Cell
      </td>
    </tr>
    <tr>
      <td>
        Cell
      </td>
      <td>
        Cell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  border: 1px solid #d1d5d7;
  width: 100%;
  font: 400 12px/20px 'Roboto';
  color: #2c2c2c;
}

.c0 th {
  font-weight: 600;
  text-align: left;
  background: #e2e6e3;
}

.c0 th,
.c0 td {
  padding: 8px 12px;
  border-bottom: 1px solid #d1d5d7;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

.c0 tr:hover,
.c0 td:hover {
  background: rgba(71,219,153,0.16);
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th>
        Header
      </th>
      <th>
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Cell
      </td>
      <td>
        Cell
      </td>
    </tr>
    <tr>
      <td>
        Cell
      </td>
      <td>
        Cell
      </td>
    </tr>
  </tbody>
</table>
`;
